# django-elixir-toolkit

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  run.sh
.github/workflows/: django.yml
elixir_toolkit/: apps.py  ckeditor.py  defaults.py  forms.py  middleware.py  mixins.py  tests.py  utils.py  views.py
elixir_toolkit/static/css/: button.css  selectize.css
elixir_toolkit/static/css/toolkit/: bulma-list.css  button.css  ckeditor.css  selectize.css  tabs.css
elixir_toolkit/static/js/toolkit/: ckeditor-clipboard-manager.js  ckeditor-load-external-plugins.js  ckeditor-upload-adapter.js  fields-dependencies.js  tabs-scroll-hints.js
elixir_toolkit/templates/elixir_toolkit/: liveidentity_script.html
elixir_toolkit/templates/elixir_toolkit/ckeditor/: post.html  pre.html
elixir_toolkit/templates/elixir_toolkit/components/: button.html  filter_bar.html  list.html  select.html  table.html  tabs_scroll_hints.html  toolkit_css.html
elixir_toolkit/templates/elixir_toolkit/components/fields/: file_input.html  password_input.html
elixir_toolkit/templatetags/: ckeditor_tags.py  elixir_toolkit_tags.py  liveidentity_tags.py
test_app/: asgi.py  settings.py  urls.py  wsgi.py
test_views/: forms.py  views.py
test_views/static/css/: custom.css
test_views/templates/: base.html  form_test.html
