[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-elixir-toolkit"
version = "0.13.4"
description = "Refacto of configPageMixin -> split it on 3 different mixins"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-crispy-forms>=2.0",
    "crispy-bulma>=0.10",
    "python-dateutil>=2.8"
]

[tool.setuptools.packages.find]
include = ["elixir_toolkit*"] # On n'inclut que le dossier du toolkit
