[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-elixir-toolkit"
version = "0.15.0"
description = "Add ckeditor feature with fields_dependencies"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-crispy-forms>=2.0",
    "python-dateutil>=2.8",
    "django-ckeditor-5>=0.2.20"
]

[tool.setuptools.packages.find]
include = ["elixir_toolkit*"] # On n'inclut que le dossier du toolkit
